--- a/templates/upload.html
+++ b/templates/upload.html
@@ -39,5 +39,7 @@
     <div style="margin-bottom: 20px;"></div>
 </div>
 <script src="/static/script.js"></script>
+<script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
+
 </body>
 </html>
